# esp32-neopixel-tetris

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  gdbinit  heaptrace-gdbinit  sdkconfig  sdkconfig.old
.github/workflows/: main.yml
components/: CMakeLists.txt
components/neopixel_display/: CMakeLists.txt  gen_Matrix_LUT.py  neopixel_display.c
components/neopixel_display/include/: neopixel_display.h
components/neopixel_display/test/: CMakeLists.txt  test_display.c
include/: defs.h  espnow_remote.h  neopixel_display.h  npix_tetris_defs.h
main/: CMakeLists.txt  espnow_example_main.c  espnow_remote.c  espnow_remote_test.c  espnow_remote_test.h  idf_component.yml  initial_attempt_espnow_remote_test.txt  main.c  neopixel_display.c
test/: CMakeLists.txt  test_remote_handling.c
test/main/: CMakeLists.txt  unit_test_main.c
